fix wrapping div in some specific case like vertical scrolling bar

--- a/src/www/themes/funky/css/theme-pages.css
+++ b/src/www/themes/funky/css/theme-pages.css
@@ -216,6 +216,7 @@
 	border-collapse: collapse;
 	text-align: left;
 	vertical-align: middle;
+	width: 100%;
 }
 
 .docmanDiv td, .docmanDiv th {
